--- a/style.css
+++ b/style.css
@@ -5,3 +5,29 @@ body{
 .main-content{
 	padding-top: 70px;
 }
+
+@keyframes projects {
+    from {background-color: white;}
+    to {background-color: #C8FFFC;}
+}
+
+.Project-One, .Project-Three, .Project-Five {
+    background-color: white;
+    animation-name: projects;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: linear; 
+}
+
+.Project-Two, .Project-Four, .Project-Six {
+    background-color: white;
+    animation-name: projects;
+    animation-duration: 4s;
+    animation-delay: 4s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: linear; 
+}
+
+
